fixes bug 190003 "cannot open links when pipelining enabled, URLs load forever, process not terminated on exit" r=dougt sr=bzbarsky a=dbaron